--- a/.github/workflows/azure-functions-app-dotnet.yml
+++ b/.github/workflows/azure-functions-app-dotnet.yml
@@ -52,7 +52,7 @@ jobs:
       shell: pwsh # For Linux, use bash
       run: |
         pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-        dotnet build Photos/Photos.sln --configuration Release --output ./output
+        dotnet build Photos/Photos/Photos.csproj --configuration Release --output ./output
         popd
 
     - name: 'Run Azure Functions Action'
